infra/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spg
  labels:
    name: spg
    app.kubernetes.io/part-of: spg
